--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@ maxlength="18" placeholder="enter item (18 characters max.)" />
 <p class="CtrAbout"><input class="button" id="About" type="button" 
 value="&bull;&bull;&bull; About &bull;&bull;&bull;" onclick="About()" /></p>
 
-<footer><span class="NoBr">Week 13: Web233 Assignment</span> <span class="SqBull">&#9724;</span>
-<span class="NoBr">Assignment #13, Shopping List App</span>
+<footer><span class="NoBr">Week 14: Web233 Assignment</span> <span class="SqBull">&#9724;</span>
+<span class="NoBr">Assignment #14, e-Shopper App</span>
 <br class="FootBrk"><span class="NoBr">Curt Dunmire</span></footer>
 </div>
 
