--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Assignment #14
 -->
 <head>
 <meta charset="UTF-8">
-<title>Week 14: Web233 Assignment, Shopping List App • Curt Dunmire</title>
+<title>Week 14: Web233 Assignment, e-Shopper App • Curt Dunmire</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="shopping cart">
